--- a/quiz3.html
+++ b/quiz3.html
@@ -1,8 +1,9 @@
 <html>
-  <h1>°Êª«¤¶²Ð</h1>
-  <div id="contain"></div>
-   <div id="contain"></div>
-   <div id="contain"></div>
-<script tuye="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js""></script>
- <script type=text/javascript src="animal.js"></script>
-</html>                                             
+    <h1>å‹•ç‰©ä»‹ç´¹</h1> 
+    <div id="contain"></div> 
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js">
+    </script>
+<script type=text/javascript src="quiz3.js"></script>
+
+<div>åœ–ç‰‡åŠ è¼‰ä¸­.....</div>
+</html>                                       
